# sose

./: .justfile  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: blank.yml  ci-workflows.yml  main.yml  on-release-main.yml  validate-codecov-config.yml
docs/: index.md  modules.md
