[project]
name = "sose"
version = "0.1.0"
description = "Lie Group transformation and spatial framework"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["lie groups", "geometry", "robotics"]
license = { text = "MIT" }
authors = [{ name = "pikld", email = "saucemmelier@proton.me" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=2.3.4",
]

[project.urls]
Homepage = "https://github.com/pikld/sose"
Issues = "https://github.com/pikld/sose/issues"

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "hypothesis>=6.142.2",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "ty>=0.0.1a23",
]

docs = [
    "mike>=2.1.3",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.22",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings[python]>=0.30.1",
]

[build-system]
requires = ["uv_build >= 0.9.2, <0.10.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]
exclude = ["tests/data"]

[tool.ruff.lint]
select = [
  "E", "F", "B", "I", "UP", "N", "C90", "PL", "RUF"
]
ignore = ["E501"]  # handled by formatting

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --tb=short -ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
